--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
 <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-<!-- Style Sheets  -->
+<!-- Style Sheets error page -->
 
 <link rel="stylesheet" href="assets/ccs/reset.css">
 <link rel="stylesheet" href="assets/ccs/styleGuide.css">
 <link rel="stylesheet" href="assets/ccs/style.css">
 <link rel="stylesheet" href="assets/ccs/errorBox.css">
+
+<!--Links related to favicon-->
 
 <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
